# QuasarDB

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
apps/client/: CMakeLists.txt  main.cpp
apps/client/include/qdb/client/: application.h  config.h  connection.h  reader.h  renderer.h  request.h  response.h  session.h
apps/client/tests/: client_smoke_test.cpp
apps/server/: CMakeLists.txt  main.cpp
apps/server/include/qdb/server/: analyzer.h  application.h  connection.h  lexer.h  logger.h  monitor.h  optimizer.h  parser.h  router.h  security.h  session.h  telemetry.h
apps/server/tests/: server_smoke_test.cpp
apps/storage/: CMakeLists.txt  main.cpp
apps/storage/include/qdb/storage/: agregator.h  application.h  b_star_plus_tree.h  connection.h  database.h  evaluator.h  executor.h  interner.h  journal.h  node.h  pager.h  table.h
apps/storage/include/qdb/storage/b_star_plus_tree/: b_star_plus_tree.h  internal_node.h  leaf_node.h  node.h
apps/storage/tests/: b_star_plus_tree_test.cpp  pager_test.cpp  storage_smoke_test.cpp
libs/core/: CMakeLists.txt
libs/core/tests/: core_smoke_test.cpp
scripts/: setup.sh
tests/: CMakeLists.txt
tests/storage/: b_star_plus_tree_test.cpp
